fix: update pages

--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,71 @@
 entries:
+  - timestamp: 2025-10-16T11:41:26.062Z
+    operation: page_update
+    feedback: section3 中的 generate 命令改为使用 doc-generate-docs.png 图片来展示，其他项不变
+    page: /home
+  - timestamp: 2025-10-16T11:22:36.481Z
+    operation: structure_update
+    feedback: 删除 about 文档
+  - timestamp: 2025-10-16T11:20:36.704Z
+    operation: page_update
+    feedback: 将 sectino2 拆为 三个 section
+    page: /home
+  - timestamp: 2025-10-16T10:46:49.921Z
+    operation: page_update
+    feedback: 给 section2 添加一个灰色的背景色
+    page: /home
+  - timestamp: 2025-10-16T10:44:14.300Z
+    operation: page_update
+    feedback: 给 section2 新增一个灰色背景色
+    page: /home
+  - timestamp: 2025-10-16T10:39:25.222Z
+    operation: page_update
+    feedback: section2 中不需要展示图片
+    page: /home
+  - timestamp: 2025-10-16T10:33:15.257Z
+    operation: page_update
+    feedback: section2 拆为三个 section ，不使用列表
+    page: /home
+  - timestamp: 2025-10-16T10:28:39.276Z
+    operation: page_update
+    feedback: section2 拆为三个 section 展示，不使用列表
+    page: /home
+  - timestamp: 2025-10-16T10:23:14.501Z
+    operation: page_update
+    feedback: section2 拆为三个 section ，不使用列表
+    page: /home
+  - timestamp: 2025-10-16T09:03:36.042Z
+    operation: page_update
+    feedback: section2 增加展示图片
+    page: /home
+  - timestamp: 2025-10-16T09:00:25.301Z
+    operation: page_update
+    feedback: section 2-4 三个 section 合并为一个 section ，使用列表展示
+    page: /home
+  - timestamp: 2025-10-16T08:52:38.030Z
+    operation: structure_update
+    feedback: About 页面标题修改为 'About‘
+  - timestamp: 2025-10-16T08:42:50.468Z
+    operation: structure_update
+    feedback: 新增 about 页面
+  - timestamp: 2025-10-16T08:41:02.664Z
+    operation: structure_update
+    feedback: about 页面的标题修改为 'About'
+  - timestamp: 2025-10-16T08:40:31.048Z
+    operation: structure_update
+    feedback: about 页面的标题修改为 'About'
+  - timestamp: 2025-10-16T08:39:22.677Z
+    operation: structure_update
+    feedback: 修改 about 页面标题为 About
+  - timestamp: 2025-10-16T08:22:55.988Z
+    operation: structure_update
+    feedback: about 页面的标题修改为 'About'
+  - timestamp: 2025-10-16T08:17:12.504Z
+    operation: structure_update
+    feedback: add home page
+  - timestamp: 2025-10-16T07:49:24.796Z
+    operation: structure_update
+    feedback: 新增 about page
   - timestamp: 2025-10-16T07:44:31.603Z
     operation: structure_update
     feedback: 新增 about 页面
