--- a/.aigne/web-smith/pages/output/community.yaml
+++ b/.aigne/web-smith/pages/output/community.yaml
@@ -1,7 +1,7 @@
 id: 423f8449a3d5581e
-createdAt: 2025-10-16T07:46:59.698Z
-updatedAt: 2025-10-16T07:46:59.698Z
-publishedAt: 2025-10-16T07:46:59.698Z
+createdAt: 2025-10-16T11:41:54.075Z
+updatedAt: 2025-10-16T11:41:54.075Z
+publishedAt: 2025-10-16T11:41:54.075Z
 isPublic: true
 locales:
   en:
@@ -1202,9 +1202,9 @@ dataSource:
             style:
               variant: h2
         v5utpm7bu9yvdpnq:
-          value: flex-start
+          value: center
         kyg0hdy5uqq4gc1o:
-          value: flex-start
+          value: center
   d6415ec1d624285f:
     en:
       properties:
