--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -13,57 +13,49 @@
       - "text": "View Features"
         "link": "link:///features"
     "splitHeroRightImage": "mediakit://doc-regenerate.png"
-  - "sectionName": "IntelligentAnalysisBenefit"
-    "sectionSummary": "Benefit section for Intelligent Analysis with a supporting visual on the left and descriptive text on the right, creating a clear left-right layout."
-    "contentCardTitle": "Intelligent Analysis"
-    "contentCardDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
-    "contentCardLeftImage": "https://placehold.co/800x450?text=Intelligent+Analysis"
-  - "sectionName": "GlobalReadyBenefit"
-    "sectionSummary": "Benefit section for Global Ready, featuring text on the left and a visual on the right to create an alternating left-right flow."
-    "contentCardTitle": "Global Ready"
-    "contentCardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
-    "contentCardRightImage": "https://placehold.co/800x450?text=Global+Ready"
-  - "sectionName": "AlwaysCurrentBenefit"
-    "sectionSummary": "Benefit section for Always Current, returning to a left-image, right-text layout to complete the dynamic, scannable presentation of key benefits."
-    "contentCardTitle": "Always Current"
-    "contentCardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
-    "contentCardLeftImage": "https://placehold.co/800x450?text=Always+Current"
+  - "sectionName": "KeyBenefits"
+    "sectionSummary": "A three-column grid showcasing the key benefits of DocSmith - Intelligent Analysis, Global Ready, and Always Current."
+    "threeColumnGridTitle": "Why DocSmith?"
+    "list":
+      - "sectionName": "IntelligentAnalysisCard"
+        "sectionSummary": "Card for Intelligent Analysis benefit, now with an icon."
+        "iconName": "lucide:brain-circuit"
+        "cardTitle": "Intelligent Analysis"
+        "cardDescription": "Our AI understands your code's structure, patterns, and intent to create truly meaningful docs."
+      - "sectionName": "GlobalReadyCard"
+        "sectionSummary": "Card for Global Ready benefit, now with an icon."
+        "iconName": "lucide:globe"
+        "cardTitle": "Global Ready"
+        "cardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
+      - "sectionName": "AlwaysCurrentCard"
+        "sectionSummary": "Card for Always Current benefit, now with an icon."
+        "iconName": "lucide:refresh-cw"
+        "cardTitle": "Always Current"
+        "cardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
   - "sectionName": "ProductDemo"
-    "sectionSummary": "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
+    "sectionSummary": "A visual, multi-step showcase of the DocSmith workflow using screenshots of the tool in action. This section demonstrates the core commands—generate, update, translate, and publish—to give users a clear view of the product's capabilities."
     "oneColumnGridTitle": "See It In Action: From Code to Docs in Minutes"
     "list":
       - "sectionName": "GenerateDemo"
-        "sectionSummary": "Demonstrates the initial 'generate' command with a terminal playback on the left and descriptive text on the right."
-        "terminalPlaybackData": "@generate.json"
-        "terminalLeft":
-          "title": "aigne doc generate"
-          "description": "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
-          "actionTitle": "Learn How to Generate"
-          "actionLink": "link:///quick-start"
+        "sectionSummary": "Demonstrates the initial 'generate' command with a screenshot of the process and descriptive text on the right."
+        "contentCardLeftImage": "mediakit://doc-generate-docs.png"
+        "contentCardTitle": "aigne doc generate"
+        "contentCardDescription": "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
       - "sectionName": "UpdateDemo"
-        "sectionSummary": "Shows the 'update' command in action, with the terminal playback on the right to create visual rhythm."
-        "terminalPlaybackData": "@update.json"
-        "terminalRight":
-          "title": "aigne doc update"
-          "description": "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
-          "actionTitle": ""
-          "actionLink": ""
+        "sectionSummary": "Shows the 'update' command in action, with a screenshot on the right to create visual rhythm."
+        "contentCardRightImage": "mediakit://doc-update.png"
+        "contentCardTitle": "aigne doc update"
+        "contentCardDescription": "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
       - "sectionName": "TranslateDemo"
-        "sectionSummary": "Highlights the 'translate' command, continuing the alternating layout with the terminal playback on the left."
-        "terminalPlaybackData": "@translate.json"
-        "terminalLeft":
-          "title": "aigne doc translate"
-          "description": "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
-          "actionTitle": ""
-          "actionLink": ""
+        "sectionSummary": "Highlights the 'translate' command, continuing the alternating layout with a screenshot on the left."
+        "contentCardLeftImage": "mediakit://doc-translate-langs.png"
+        "contentCardTitle": "aigne doc translate"
+        "contentCardDescription": "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
       - "sectionName": "PublishDemo"
-        "sectionSummary": "Concludes the demo by showcasing the 'publish' command, with the terminal playback on the right."
-        "terminalPlaybackData": "@publish.json"
-        "terminalRight":
-          "title": "aigne doc publish"
-          "description": "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
-          "actionTitle": "Learn About Publishing"
-          "actionLink": "https://docsmith.aigne.io/docs/aigne-web-smith/en/core-tasks-publishing-your-website-c47353"
+        "sectionSummary": "Concludes the demo by showcasing the 'publish' command, with a screenshot on the right."
+        "contentCardRightImage": "mediakit://doc-publish.png"
+        "contentCardTitle": "aigne doc publish"
+        "contentCardDescription": "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
   - "sectionName": "LanguageFeatures"
     "sectionSummary": "Spotlights the multi-language support with a clear headline, descriptive text, and a relevant screenshot, reinforced by a CTA to explore all features."
     "featureSectionTitle": "Speak to a Global Audience"
